# vcpkg-examples

./: 0001-Push-changes.patch  CMakeLists.txt
CMake/Scripts/: GetCompilerVersion.cmake  HelperMacros.cmake  NamingConvention.cmake  SetupProject.cmake  SupportQt.cmake
Examples/Qt/Other/DarkMode0/: CMakeLists.txt
Examples/Qt/Other/DarkMode0/Include/: DM0Dialog.h
Examples/Qt/Other/DarkMode0/rc/: DM0Dialog.ui
Examples/Qt/Other/DarkMode0/src/: DM0Dialog.cxx  main.cxx
Examples/Qt/Other/MultipleMonitors0/: CMakeLists.txt
Examples/Qt/Other/MultipleMonitors0/Include/: MonitorWidget.h  smSystemDisplay.h  smSystemDisplayManager.h
Examples/Qt/Other/MultipleMonitors0/rc/: MonitorWidget.ui
Examples/Qt/Other/MultipleMonitors0/src/: MonitorWidget.cxx  main.cxx  smSystemDisplay.cxx  smSystemDisplayManager.cxx
Examples/Qt/Widgets/QGraphicsView0/: CMakeLists.txt
Examples/Qt/Widgets/QGraphicsView0/Include/: QGraphicsView0.h
Examples/Qt/Widgets/QGraphicsView0/src/: QGraphicsView0.cxx  main.cxx
Examples/boost/: CMakeLists.txt
Examples/boost/ProgramOptions/ProgramOptions0/: CMakeLists.txt
Examples/boost/ProgramOptions/ProgramOptions0/src/: ProgramOptions0.cxx
Examples/cli11/: CMakeLists.txt
Examples/fmt/: CMakeLists.txt
Examples/fmt/fmt_basic0/: CMakeLists.txt
Examples/fmt/fmt_basic0/src/: fmt_example_0.cxx
Examples/itk/: CMakeLists.txt
Examples/itk/Filtering/Convolution0/: CMakeLists.txt
Examples/itk/Filtering/Convolution0/src/: Convolution0.cxx
Examples/itk/Filtering/Convolution1/: CMakeLists.txt
Examples/itk/Filtering/Convolution1/src/: Convolution1.cxx
Examples/itk/Filtering/Convolution3/: CMakeLists.txt
Examples/itk/Filtering/Convolution3/Include/: Convolution3.h
Examples/itk/Filtering/Convolution3/src/: Convolution3.cxx
Examples/itk/Filtering/Convolution4/: CMakeLists.txt
Examples/itk/Filtering/Convolution4/Include/: CADe.h  CADe_Private.h  CADe_Score.h  Convolution4.h
Examples/itk/Filtering/Convolution4/src/: CADe.cxx  CADe_Private.cxx  Convolution4.cxx
Examples/libxlsxwriter/: CMakeLists.txt
Examples/opencv/: CMakeLists.txt
Examples/opencv/Images/ViewImage0/: CMakeLists.txt
Examples/opencv/Images/ViewImage0/src/: opencvViewImage0.cxx
Examples/vtk/: CMakeLists.txt
Examples/vtk/GeometricObjects/: CMakeLists.txt
Examples/vtk/GeometricObjects/Cone/: CMakeLists.txt  cone.cxx
Examples/vtk/IO/: CMakeLists.txt
Examples/vtk/IO/ReadDICOMSeries/: CMakeLists.txt
Examples/vtk/IO/ReadDICOMSeries1/: CMakeLists.txt
Examples/vtk/IO/ReadTIFF/: CMakeLists.txt
Examples/vtk/IO/ReadTIFF/src/: ReadTIFF.cxx
Examples/vtk/Images/ImageAlgorithmFilter/: CMakeLists.txt  ImageAlgorithmFilter.cxx
Examples/vtk/Images/ImageAlgorithmFilter_1/: CMakeLists.txt  ImageAlgorithmFilter.cxx  vtkImageAlgorithmFilter.cxx
Examples/vtk/Images/ImageStack/: CMakeLists.txt  ImageStack.cxx
Examples/vtk/Images/MultiframeDicom_0/: CMakeLists.txt
Examples/vtk/Images/MultiframeDicom_0/Include/: QtVTKRenderWindow.h
Examples/vtk/Images/MultiframeDicom_0/src/: QtVTKRenderWindow.cxx  QtVTKRenderWindowsApp.cxx
Examples/vtk/Images/MultiframeDicom_1/: CMakeLists.txt
Examples/vtk/Images/MultiframeDicom_1/Include/: QtVTKRenderWindow.h
Examples/vtk/Images/MultiframeDicom_1/rc/: QtVTKRenderWindow.ui
Examples/vtk/Images/MultiframeDicom_1/src/: QtVTKRenderWindow.cxx  QtVTKRenderWindowsApp.cxx
Examples/vtk/Images/QtFourPaneImageViewer/: CMakeLists.txt
Examples/vtk/Images/QtFourPaneImageViewer/src/: QtVTKRenderWindows.cxx
Examples/vtk/Images/QtFourPaneImageViewer1/: CMakeLists.txt
Examples/vtk/Images/QtFourPaneImageViewer1/Include/: vtkResliceCursorCallback.h
Examples/vtk/Images/QtFourPaneImageViewer1/src/: QtVTKRenderWindows.cxx  vtkResliceCursorCallback.cxx
Examples/vtk/Images/QtFourPaneImageViewer2/: CMakeLists.txt
Examples/vtk/Images/QtFourPaneImageViewer2/src/: vtkImageAlgorithmFilter.cxx
Examples/vtk/Images/QtFourPaneImageViewer3/: CMakeLists.txt
Examples/vtk/Images/QtFourPaneImageViewer3/rc/: QtVTKRenderWindows.ui  QtVTKRenderWindowsVTK9.ui
Examples/vtk/Images/QtFourPaneImageViewer3/src/: QtVTKRenderWindows.cxx
Examples/vtk/Images/QtFourPaneImageViewer4/: CMakeLists.txt
Examples/vtk/Images/QtFourPaneImageViewer4/rc/: QtVTKRenderWindows.ui
Examples/vtk/Images/QtFourPaneImageViewer4/src/: QtVTKRenderWindows.cxx
Examples/vtk/Images/QtFourPaneImageViewerGLNative/: CMakeLists.txt
Examples/vtk/Images/QtFourPaneImageViewerGLNative/rc/: QtVTKRenderWindows.ui
Examples/vtk/Images/QtFourPaneImageViewerGLNative/src/: QtVTKRenderWindows.cxx
Examples/vtk/Images/QtSinglePaneImageViewerWithDBTSupport0/: CMakeLists.txt
Examples/vtk/Images/QtSinglePaneImageViewerWithDBTSupport0/Include/: QtVTKRenderWindows.h
Examples/vtk/Images/QtSinglePaneImageViewerWithDBTSupport0/src/: QtVTKRenderWindows.cxx
Examples/vtk/Other/: CMakeLists.txt
Examples/vtk/Other/TestQtDebugLeaksView0/: CMakeLists.txt  TestQtDebugLeaksView.cxx
Examples/vtk/Other/TestQtDebugLeaksView1/: CMakeLists.txt  TestQtDebugLeaksView.cxx  myVtkQtDebugLeaksModel.cxx  myVtkQtDebugLeaksModel.h  myVtkQtDebugLeaksView.cxx  myVtkQtDebugLeaksView.h
Examples/vtk/Widgets/: CMakeLists.txt
Examples/vtk/Widgets/ImageTracerWidgetInsideContour/: CMakeLists.txt
Examples/vtk/Widgets/SeedWidget/: CMakeLists.txt  SeedWidget.cxx
Examples/zlib/: CMakeLists.txt
libxlsxwriter/xlsxwriter_WBUS_Import_Export_0/: CMakeLists.txt
libxlsxwriter/xlsxwriter_WBUS_Import_Export_0/Include/: CSVInfo.h  exportCSV.h  stringHelpers.h
libxlsxwriter/xlsxwriter_WBUS_Import_Export_0/src/: CSVInfo.cxx  stringHelpers.cxx
libxlsxwriter/xlsxwriter_defined_name_0/: CMakeLists.txt
libxlsxwriter/xlsxwriter_tutorial_1/: CMakeLists.txt
libxlsxwriter/xlsxwriter_tutorial_3/: CMakeLists.txt
ports/: itk.7z  qwt.7z
ports/gdcm/: CONTROL  portfile.cmake
ports/gdcm.hide/: portfile.cmake
ports/libxlsxwriter/: 0002-fix-uwp-build.patch  portfile.cmake
ports/qwt/: 0001-slider-legacy.patch  portfile.cmake
ports/qxt/: CONTROL  portfile.cmake  (+1 more)
zlib/: CMakeLists.txt
zlib/src/: vcpkg_zlib_example_0.cxx
(+53 files in other folders)
